[package]
name = "grpc_in_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.13.0"
prost = "0.13.5"
tokio = { version = "1.44.1", features = ["full"]}

[build-dependencies]
tonic-build = "0.13.0"

[[bin]]
name = "grpc-server"
path = "src/server.rs"

[[bin]]
name = "grpc-client"
path = "src/client.rs"